# search-engine

./: .gitignore  CMakeLists.txt  README.md  path.txt
examples/: answers.json
examples/resources/: file000.txt  file002.txt
include/: InvertedIndex.h  converterJSON.h  searchServer.h
src/: CMakeLists.txt  InvertedIndex.cpp  converterJSON.cpp  main.cpp  requests.json  searchServer.cpp
tests/: CMakeLists.txt  search_engine_test.cc
